bonus is now good

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -11,7 +11,7 @@ NAME = libftprintf.a
 
 CC = gcc
 
-FLAGS = -Wall -Werror -Wextra
+FLAGS = -Wall -Werror -Wextra -g
 
 %.o: %.c
 		${CC} ${FLAGS} -c $< -o $@
