--- a/libft/Makefile
+++ b/libft/Makefile
@@ -23,7 +23,7 @@ NAME = libft.a
 
 CC = gcc
 
-FLAGS = -Wall -Werror -Wextra
+FLAGS = -Wall -Werror -Wextra -g
 
 %.o: %.c
 		${CC} ${FLAGS} -c $< -o $@
